terraform/config/eks-best-practices/check-public-endpoint/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --payload ./good-payload.json --policy ../check-public-endpoint.yaml --output json --bindings ./binding.yaml 
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-public-endpoint
                rules:
                - rule:
                    name: check-public-endpoint
                  error: ~
                  violations: ~
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-01
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../check-public-endpoint.yaml --payload ./bad-payload-01.json --output json --bindings ./binding.yaml 
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-public-endpoint
                rules:
                - rule:
                    name: check-public-endpoint
                  error: ~
                  violations:
                  - (contains(message, 'Public access to EKS cluster endpoint must be explicitly set to false')): true
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-02
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../check-public-endpoint.yaml --payload ./bad-payload-02.json --output json --bindings ./binding.yaml 
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-public-endpoint
                rules:
                - rule:
                    name: check-public-endpoint
                  error: ~
                  violations:
                  - (contains(message, 'Public access to EKS cluster endpoint must be explicitly set to false')): true
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
